--- a/git-user-searcher/package.json
+++ b/git-user-searcher/package.json
@@ -4,23 +4,17 @@
   "private": true,
   "dependencies": {
     "@primer/octicons-react": "^19.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.2",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/sass": "^1.45.0",
     "node-sass": "^7.0.3",
-    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +41,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.2",
+    "prettier": "^2.8.8",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0"
   }
